fixed width issues on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,14 @@
 body {
     background: grey;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
     overflow-x: hidden; 
+}
+
+nav h1 {
+    text-align: center;
 }
 
 .titleText {
@@ -8,13 +16,23 @@ body {
 }
 
 .aboutMe-container {
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 
 .greeting {
     text-align: center;
     font-family: 'Anton', sans-serif;
+}
+
+.aboutMeTextWrap {
+    margin-top: 20px;
+    color: white;
+}
+
+.row .col-lg-12 .col-md-12 .col-sm-12 .col-xs-12 {
+    padding-right: 0px;
+    margin-right: 0px;
 }
 
 /* ----------------------------------------------------Images--------------------------------------------------- */
@@ -54,8 +72,13 @@ body {
 
 /* ----------------------------------------------------Skills--------------------------------------------------- */
 
+.skillHead {
+    text-align: center;
+}
+
 .skills-container {
     margin-bottom: 60px;
+    padding-bottom: 15px;
 }
 
 .skillSize {
@@ -89,3 +112,48 @@ body {
 h6 {
     font-size: 13px;
 }
+
+/* --------------------------------------------------Break Points------------------------------------------------- */
+/* @media (max-width: 575.98px) { 
+    body {
+        background: grey;
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow-x: hidden; 
+    }
+}
+
+@media (max-width: 767.98px) { 
+    body {
+        background: grey;
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow-x: hidden; 
+    }
+}
+
+@media (max-width: 991.98px) {
+    body {
+        background: grey;
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow-x: hidden; 
+    }
+}
+
+@media (max-width: 1199.98px) {
+    body {
+        background: grey;
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow-x: hidden; 
+    }
+} */
